Reverted to using the same class names on the header image markup that WordPress outputs by default, with some helper classes. In 'style.css', the helper class 'static-header' forces the container of the background image to have height, in order to ensure that it remains visible. I suspect that the site branding stuff that hasn't been output yet might be the reason that the default output is visible without a 'min-height'.

--- a/style.css
+++ b/style.css
@@ -58,123 +58,7 @@ article.type-post h1.entry-title {
 #page #content {
   padding-top: 2rem;
 }
-/* Renaming 'custom-header' to 'static-header' */
-.static-header {
-  position: relative;
-}
 
-.has-header-image.twentyseventeen-front-page .static-header,
-.has-header-video.twentyseventeen-front-page .static-header,
-.has-header-image.home.blog .static-header,
-.has-header-video.home.blog .static-header {
-  display: table;
-  height: 300px;
-  height: 75vh;
-  width: 100%;
-}
-
-.static-header-media {
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-}
-
-.static-header-media:before {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.3+75 */
-  background: -moz-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00000000", endColorstr="#4d000000", GradientType=0); /* IE6-9 */
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  right: 0;
-  z-index: 2;
-}
-
-.has-header-image .static-header-media img,
-.has-header-video .static-header-media video,
-.has-header-video .static-header-media iframe {
-  position: fixed;
-  height: auto;
-  left: 50%;
-  max-width: 1000%;
-  min-height: 100%;
-  min-width: 100%;
-  min-width: 100vw; /* vw prevents 1px gap on left that 100% has */
-  width: auto;
-  top: 50%;
-  padding-bottom: 1px; /* Prevent header from extending beyond the footer */
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.wp-static-header .wp-static-header-video-button { /* Specificity prevents .color-dark button overrides */
-  background-color: rgba(34, 34, 34, 0.5);
-  border: 1px solid rgba(255, 255, 255, 0.6);
-  color: rgba(255, 255, 255, 0.6);
-  height: 45px;
-  overflow: hidden;
-  padding: 0;
-  position: fixed;
-  right: 30px;
-  top: 30px;
-  -webkit-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.3s ease-in-out;
-  transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.3s ease-in-out;
-  width: 45px;
-}
-
-.wp-static-header .wp-static-header-video-button:hover,
-.wp-static-header .wp-static-header-video-button:focus { /* Specificity prevents .color-dark button overrides */
-  border-color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(34, 34, 34, 0.8);
-  color: #fff;
-}
-
-.admin-bar .wp-static-header-video-button {
-  top: 62px;
-}
-
-.has-header-image:not(.twentyseventeen-front-page):not(.home) .static-header-media img {
-  bottom: 0;
-  position: absolute;
-  top: auto;
-  -ms-transform: translateX(-50%) translateY(0);
-  -moz-transform: translateX(-50%) translateY(0);
-  -webkit-transform: translateX(-50%) translateY(0);
-  transform: translateX(-50%) translateY(0);
-}
-
-/* For browsers that support 'object-fit' */
-@supports ( object-fit: cover ) {
-  .has-header-image .static-header-media img,
-  .has-header-video .static-header-media video,
-  .has-header-video .static-header-media iframe,
-  .has-header-image:not(.twentyseventeen-front-page):not(.home) .static-header-media img {
-    height: 100%;
-    left: 0;
-    -o-object-fit: cover;
-    object-fit: cover;
-    top: 0;
-    -ms-transform: none;
-    -moz-transform: none;
-    -webkit-transform: none;
-    transform: none;
-    width: 100%;
-  }
-}
-
-/* Hides div in Customizer preview when header images or videos change. */
-
-body:not(.has-header-image):not(.has-header-video) .static-header-media {
-  display: none;
+.custom-header.static-header {
+  min-height: 179px;
 }
